[tool.poetry]
name = "webcrawler2021"
version = "0.1.0"
description = ""
authors = ["sonhmcode <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
babel = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
